--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="keywords" content="互联网引流工具, 黑科技引流软件, RPA自动化脚本, 自动化引流解决方案, 引流脚本开发, 引流软件教程, 引流机器人, 引流自动化技术, 营销自动化工具, 社群引流策略, 内容引流方法, 视频引流自动化, 博客引流自动化, 电商平台引流, 合规引流技术, 引流效果分析, 引流ROI优化, 引流策略定制, 引流咨询服务, 引流案例研究, 引流技术评测, 引流资源分享, 引流社群建设, 引流团队协作, 引流项目管理, 引流风险管理, 引流预算规划, 引流效果预测, 引流渠道选择, 引流目标设定, 引流绩效评估, 引流团队建设, 引流品牌定位, 引流市场分析, 引流客户洞察, 引流竞争分析, 引流策略创新, 引流内容优化, 引流视觉设计, 引流文案撰写, 引流广告投放, 引流公关策略, 引流品牌传播, 引流活动执行, 引流效果监控, 引流客户反馈, 引流市场调研, 引流产品定位, 引流服务创新, 引流客户服务, 引流品牌忠诚度, 引流客户满意度, 引流行业新人指南, 引流脚本编程, 引流技术爱好者, 引流合规性, 引流创新能力, 引流执行力, 引流社群力量, 引流共赢策略, 引流实操技巧, 引流资源获取, 引流工具推荐, 引流个人品牌, 引流业务提升, 引流学习平台, 引流知识更新, 引流技能提升, 引流社群交流, 引流合作机会, 引流合规操作, 引流创新思维, 引流实践应用,联网营销策略,引流技术教程,社群营销技巧,品牌知名度提升,客户基础扩大,创业者营销,自由职业者引流,产品服务推广,社群运营工具,社群成员吸引,内容创作推广,视频制作引流,博客营销策略,电商销售提升,电商引流技术,合规营销方法,学习型社群资源,财务自由实现,合伙人推广计划,行业新人引流,营销自动化工具,社交媒体营销,内容营销策略">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>璇机科技</title>
+    <title>璇机科技社-全网最大近万人引流实战社群</title>
   </head>
   <body>
     <noscript>
